Trying to undesrtand py_tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(write_publish)
 
 ## Find catkin and any catkin packages
 find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg)
+catkin_python_setup()
 
 ## Declare ROS messages and services
 add_message_files(FILES Num.msg)
@@ -22,7 +23,7 @@ add_executable(doorIdentifier src/doorIdentifier.cpp)
 target_link_libraries(doorIdentifier ${catkin_LIBRARIES})
 add_dependencies(doorIdentifier beginner_tutorials_generate_messages_cpp)
 
-catkin_install_python(PROGRAMS scripts/pyTalker.py scripts/pyListener.py 
+catkin_install_python(PROGRAMS scripts/pyTalker.py scripts/pyListener.py scripts/action.py
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
