--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>py_trees</exec_depend>
+  <exec_depend>py_trees_ros</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
